feature-templates/nCino/dataset/01yO3G1U-Forms/.store/metadata/objects/LLC_BI__Requirement__c.object
<CustomObject>
    <description>A Requirement defines a need which must be fulfilled in order to complete a business process or workflow.</description>
    <fields>
        <fullName>LLC_BI__Action__c</fullName>
        <description>This required field populates based on the action that the user selects. This field contains the action of each individual maintenance request.</description>
        <inlineHelpText>This required field populates based on the action that the user selects. This field contains the action of each individual maintenance request.</inlineHelpText>
        <label>Action</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Actual_Duration_Days__c</fullName>
        <description>This optional field contains the number of days taken to complete this Requirement.</description>
        <inlineHelpText>This optional field contains the number of days taken to complete this Requirement.</inlineHelpText>
        <label>Actual Duration Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Advanced_Criteria__c</fullName>
        <description>This field is optional and must be manually populated. It stores the Forms syntax that determines if a requirement will be created. If a user has criteria configured for an object and creates an object that meets the criteria, then Smart Checklist will populate the associated tasks on the object. If an object does not meet the criteria defined, then the requirement will not be created.</description>
        <inlineHelpText>This optional field stores the Forms syntax that determines if a requirement will be created.</inlineHelpText>
        <label>Advanced Criteria</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Assigned_Party__c</fullName>
        <description>This read-only field gets populated by the system with the Id of the original owner of this requirement. Possible values are Users, Queues, and LLC_BI__Role__c Ids.</description>
        <inlineHelpText>This read-only field gets populated by the system with the Id of the original owner of this requirement. Possible values are Users, Queues, and LLC_BI__Role__c Ids.</inlineHelpText>
        <label>Assigned Party</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Assignee__c</fullName>
        <description>This formula field displays the name of the User or Queue who owns this Requirement.</description>
        <formula>BLANKVALUE( Owner:Queue.QueueName , Owner:User.FirstName + &apos; &apos; + Owner:User.LastName )</formula>
        <inlineHelpText>This formula field displays the name of the User or Queue who owns this Requirement.</inlineHelpText>
        <label>Assignee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this optional field with the category associated to the requirement.</description>
        <inlineHelpText>The system automatically populates this optional field with the category associated to the requirement.</inlineHelpText>
        <label>Category</label>
        <referenceTo>LLC_BI__Requirement_Category__c</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Checklist__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This required field contains a reference to the Checklist to which this Requirement belongs.</description>
        <inlineHelpText>This required field contains a reference to the Checklist to which this Requirement belongs.</inlineHelpText>
        <label>Checklist</label>
        <referenceTo>LLC_BI__Checklist__c</referenceTo>
        <relationshipLabel>Requirements</relationshipLabel>
        <relationshipName>Requirements</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Context_Data__c</fullName>
        <description>The system automatically populates this optional text field to include lookupKeys to Snapshot data. By default, the value is blank.</description>
        <label>Context Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Context_Id__c</fullName>
        <description>This field contains the id of the record to which this Requirement pertains.</description>
        <formula>LLC_BI__Checklist__r.LLC_BI__Context_Id__c</formula>
        <inlineHelpText>This field contains the id of the record to which this Requirement pertains.</inlineHelpText>
        <label>Context Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>The field is optional. It describes the details of the requirement record.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Due_Date__c</fullName>
        <description>This optional field contains the date by which this Requirement must be completed.</description>
        <inlineHelpText>This optional field contains the date by which this Requirement must be completed.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Expected_Duration_Days__c</fullName>
        <description>This optional field contains the number of days expected to complete this Requirement.</description>
        <inlineHelpText>This optional field contains the number of days expected to complete this Requirement.</inlineHelpText>
        <label>Expected Duration Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Hard_Stop__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this field to indicate that this Requirement must be completed before the Context Object can move beyond the Checkpoint Context.</description>
        <inlineHelpText>Check this field to indicate that this Requirement must be completed before the Context Object can move beyond the Checkpoint Context.</inlineHelpText>
        <label>Hard Stop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this field to indicate this requirement is a template.</description>
        <inlineHelpText>Check this field to indicate this requirement is a template.</inlineHelpText>
        <label>Is Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Manually_Waived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The field is optional and indicates whether a Requirement record has been manually waived. The system automatically sets the Status field on a Requirement record that has not been manually waived if the record does not meet certain criteria. Manually waiving a Requirement record prevents the Status field from being automatically set. Users may manually waive a record by navigating to the checklist and selecting &apos;Waived&apos; in the user interface.</description>
        <inlineHelpText>This field indicates whether a Requirement record has been manually waived. The system sets this field automatically if the user sets a Requirement to &apos;Waived&apos; in the user interface.</inlineHelpText>
        <label>Manually Waived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Needed_By_Context__c</fullName>
        <description>Represents the context metadata record needed by this requirement.</description>
        <inlineHelpText>Represents the context metadata record needed by this requirement.</inlineHelpText>
        <label>Needed By Context</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Needed_By__c</fullName>
        <description>This field is optional. It defines which stage needs the requirement to be complete.</description>
        <label>Needed By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Qualification</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>Credit Underwriting</fullName>
                </value>
                <value>
                    <fullName>Loan Committee</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Doc Prep</fullName>
                </value>
                <value>
                    <fullName>Doc Review</fullName>
                </value>
                <value>
                    <fullName>Closing</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Closed Funded</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Servicing</fullName>
                </value>
                <value>
                    <fullName>Special Assets</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Order__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This optional field specifies the sequence in which this Requirement should be completed.</description>
        <inlineHelpText>This optional field specifies the sequence in which this Requirement should be completed.</inlineHelpText>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Proxy_Id__c</fullName>
        <description>This optional field is automatically populated with an ID of the object that is being acted upon.</description>
        <externalId>true</externalId>
        <inlineHelpText>This optional field is automatically populated with an ID of the object that is being acted upon.</inlineHelpText>
        <label>Proxy Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Proxy_Type__c</fullName>
        <description>This optional field is automatically populated with the object API name that is being acted upon.</description>
        <inlineHelpText>This optional field is automatically populated with the object API name that is being acted upon.</inlineHelpText>
        <label>Proxy Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>This required field contains the current state of this Requirement.</description>
        <inlineHelpText>This required field contains the current state of this Requirement.</inlineHelpText>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LLC_BI__Requirement_Statuses</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Sub_Status_Attribute__c</fullName>
        <description>The system automatically populates this optional picklist field to control the available values displayed to the end user for the sub-status field. By default, it is blank. An admin is required to configure the picklist values and use Matrix Manager to institute these values.</description>
        <inlineHelpText>This auto-populated field can display the status of the requirement, and determines the available sub-status of the requirement in process.</inlineHelpText>
        <label>Sub-Status Attribute</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Loan-To Do</fullName>
                </value>
                <value>
                    <fullName>Loan-In Progress</fullName>
                </value>
                <value>
                    <fullName>Loan-Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Sub_Status__c</fullName>
        <description>The user populates this optional picklist field to define the specific status of a requirement in process. This field is controlled by the Sub-Status Attribute field which dictates applicable sub-statuses by context, status, category, and other requirement attributes as determined by the financial institution. By default, it is blank.</description>
        <inlineHelpText>Select the applicable sub-status for the requirement in process.</inlineHelpText>
        <label>Sub-Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>LLC_BI__Sub_Status_Attribute__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Waiting for Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Template__c</fullName>
        <description>This optional field contains the developer name of the Requirement Template on which this Requirement is based.</description>
        <externalId>true</externalId>
        <inlineHelpText>This optional field contains the developer name of the Requirement Template on which this Requirement is based.</inlineHelpText>
        <label>Template</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Requirement</label>
    <listViews>
        <fullName>ChecklistTeamQueue_Requirement</fullName>
        <filterScope>Queue</filterScope>
        <label>Team</label>
        <queue>ChecklistTeamQueue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>